# SolidTanks

./: .gitignore  CMakeLists.txt  Command.h  IMovable.h  IRotable.h  MovableAdapter.cpp  MovableAdapter.h  MoveCommand.cpp  MoveCommand.h  MovebleAdapter.cpp  MovebleAdapter.h  README.md  UObject.cpp  UObject.h  conanfile.txt  main.cpp
.github/workflows/: build.yml
app/: CMakeLists.txt  main.cpp
cmake/: helper.cmake
src/: CMakeLists.txt  CommandProcessor.h  HardStopThreadCommand.cpp  HardStopThreadCommand.h  ICommand.h  IMovable.h  IRotable.h  MoveCommand.cpp  MoveCommand.h  MovebleAdapter.cpp  MovebleAdapter.h  RotableAdapter.cpp  RotableAdapter.h  RotateCommand.cpp  RotateCommand.h  SoftStopThreadCommand.h  UException.h  UObject.cpp  UObject.h  main.cpp
tests/: CMakeLists.txt  CommandTests.cpp  mocks.h  tests.cpp
tests/mocks/: MovableMock.h  RotableMock.h
